--- a/web/index.html
+++ b/web/index.html
@@ -26,8 +26,10 @@
   <meta name="apple-mobile-web-app-title" content="nazareth_presby_school_project">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>nazareth_presby_school_project</title>
+  <title>Nazareth Presby School Project</title>
   <link rel="manifest" href="manifest.json">
+  <!-- Favicon -->
+  <link rel="icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
